--- a/Eduversity.com/Client/Pages/LoginPages/AdminSignUp.razor
+++ b/Eduversity.com/Client/Pages/LoginPages/AdminSignUp.razor
@@ -3,7 +3,7 @@
 
 <PageTitle>Sign Up</PageTitle>
 
-<SignUpComponent Role="Admin" MainTitle="Create New Admin Account" />
+<SignUpComponent Role="Admin" MainTitle="Create New Admin's Account" />
 
 @code {
     
