--- a/Eduversity.com/Client/Pages/LoginPages/ChangePassword.razor
+++ b/Eduversity.com/Client/Pages/LoginPages/ChangePassword.razor
@@ -5,49 +5,45 @@
 
 <PageTitle>Change Password</PageTitle>
 
-<div class="border m-0 p-3 rounded-3">
-    @if (!ChangeUserPassword)
-    {
-        <span>
-            <button class="btn btn-outline-secondary" @onclick="EnableChangePassword">Change Password</button>
-        </span>
-    }
-    else
-    {
-        <EditForm Model="request" OnValidSubmit="HandleChangeUserPassword">
-            <DataAnnotationsValidator />
+<div class="card shadow m-0">
+    <div class="card-header">
+        <h5 class="my-main-title">Change Password</h5>
+    </div>
+    <div class="card-body">
+        @if (!ChangeUserPassword)
+        {
+            <span>
+                <button class="btn btn-outline-secondary" @onclick="EnableChangePassword">Change Password</button>
+            </span>
+        }
+        else
+        {
+            <EditForm Model="request" OnValidSubmit="HandleChangeUserPassword">
+                <DataAnnotationsValidator />
 
-            <div>
-                <br />
-            </div>
-            <div>
-                <h3 class="my-main-title">Change Password</h3><hr>
-            </div>
-            <div>
-                <br />
-            </div>
-            <div class="col-12 row" style="font-weight:bold">
-                <span class="@messageCssClass col-12 mb-3">@message</span>
-            </div>
-            <div class="col-12 row mb-4">
-                <InputText id="oldPassword" @bind-Value="request.OldPassword" class="form-control" type="password" placeholder="Old Password" />
-                <ValidationMessage For="@(() => request.OldPassword)" class="text-start" />
-            </div>
-            <div class="col-12 row mb-4">
-                <InputText id="newPassword" @bind-Value="request.NewPassword" class="form-control" type="password" placeholder="New Password" />
-                <ValidationMessage For="@(() => request.NewPassword)" class="text-start" />
-            </div>
-            <div class="col-12 row mb-4">
-                <InputText id="confirmNewPassword" @bind-Value="request.ConfirmNewPassword" class="form-control" type="password" placeholder="Confirm New Password" />
-                <ValidationMessage For="@(() => request.ConfirmNewPassword)" class="text-start" />
-            </div>
-            <button type="submit" class="btn btn-primary">Change Password</button>
-            @if (showCancelButton)
-            {
-                <button class="btn btn-danger mx-3" @onclick="Cancel">Cancel</button>
-            }
-        </EditForm>
-    }
+                <div class="col-12 row" style="font-weight:bold">
+                    <span class="@messageCssClass col-12 mb-3">@message</span>
+                </div>
+                <div class="col-12 row mb-4">
+                    <InputText id="oldPassword" @bind-Value="request.OldPassword" class="form-control" type="password" placeholder="Old Password" />
+                    <ValidationMessage For="@(() => request.OldPassword)" class="text-start" />
+                </div>
+                <div class="col-12 row mb-4">
+                    <InputText id="newPassword" @bind-Value="request.NewPassword" class="form-control" type="password" placeholder="New Password" />
+                    <ValidationMessage For="@(() => request.NewPassword)" class="text-start" />
+                </div>
+                <div class="col-12 row mb-4">
+                    <InputText id="confirmNewPassword" @bind-Value="request.ConfirmNewPassword" class="form-control" type="password" placeholder="Confirm New Password" />
+                    <ValidationMessage For="@(() => request.ConfirmNewPassword)" class="text-start" />
+                </div>
+                <button type="submit" class="btn btn-primary">Change Password</button>
+                @if (showCancelButton)
+                {
+                    <button class="btn btn-danger mx-3" @onclick="Cancel">Cancel</button>
+                }
+            </EditForm>
+        }
+    </div>
 </div>
 
 @code {
