--- a/Eduversity.com/Client/Pages/LoginPages/LecturerSignUp.razor
+++ b/Eduversity.com/Client/Pages/LoginPages/LecturerSignUp.razor
@@ -3,7 +3,7 @@
 
 <PageTitle>Sign Up</PageTitle>
 
-<SignUpComponent Role="Lecturer" MainTitle="Create New Lecturer Account" />
+<SignUpComponent Role="Lecturer" MainTitle="Create New Lecturer's Account" />
 
 @code {
     
