--- a/Eduversity.com/Client/Pages/LoginPages/StudentSignUp.razor
+++ b/Eduversity.com/Client/Pages/LoginPages/StudentSignUp.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>Sign Up</PageTitle>
 
-<SignUpComponent Role="Student" MainTitle="Create New Student Account"/>
+<SignUpComponent Role="Student" MainTitle="Create New Student's Account"/>
 
 @code {
     
