--- a/Eduversity.com/Client/Shared/Layouts/MenuUserLogin.razor
+++ b/Eduversity.com/Client/Shared/Layouts/MenuUserLogin.razor
@@ -20,6 +20,11 @@
         </NavLink>
     </li>
     <li class="nav-item ps-5 pe-1">
+        <NavLink class="nav-link" @onclick="() => toggleMenuService.ToggleNavMenu()" href="hod/signin">
+            HOD
+        </NavLink>
+    </li>
+    <li class="nav-item ps-5 pe-1">
         <NavLink class="nav-link" @onclick="() => toggleMenuService.ToggleNavMenu()" href="admin/signin">
             Admin
         </NavLink>
