--- a/Eduversity.com/Client/Pages/Admin/Countries/EditCountry.razor
+++ b/Eduversity.com/Client/Pages/Admin/Countries/EditCountry.razor
@@ -19,93 +19,90 @@
 
         @if (country.IsEditing)
         {
-            <h3 class="my-main-title">Edit Country - "@country.Name"</h3>
+            <h5 class="my-main-title">Edit Country - "@country.Name"</h5>
         }
         else if (country.IsNew)
         {
             <h3 class="my-main-title">Create a new Country</h3>
         }
         <hr />
-        <button type="button" class="btn btn-outline-primary btn-sm float-end" @onclick="@(() => BackToCountries())">
-            Countries
-            <i class="oi oi-caret-right"></i>
-        </button>
-        <br />
-
-        <br />
-
-        <br />
-
-        <EditForm Model="country" OnValidSubmit="AddOrUpdateCountry" class="was-validated">
-            <DataAnnotationsValidator></DataAnnotationsValidator>
-
-            <div class="my-header row">
-                <div class="col">Country</div>
-                <div class="col text-align:center">Active</div>
-                <div class="col"></div>
+        <div class="card shadow mb-4">
+            <div class="card-header bg-transparent">
+                <button type="button" class="btn btn-outline-primary btn-sm float-end" @onclick="@(() => BackToCountries())">
+                    Countries
+                    <i class="oi oi-caret-right"></i>
+                </button>
             </div>
-            <div class="row">
-                <div class="col">
-                    <InputText id="countryName" @bind-Value="country.Name" class="form-control form-control-sm" placeholder="Enter Country" maxlength="30" required></InputText>
-                    <ValidationMessage For="@(() => country.Name)" />
-                    <div class="invalid-feedback">Please enter the country name</div>
-                </div>
-                <div class="col col-visible">
-                    <InputCheckbox @bind-Value="country.IsActive" class="form-check-input my-check-box"></InputCheckbox>
-                </div>
-                <div class="col">
-                </div>
-            </div>
-            <hr>
+            <div class="card-body">
+                <EditForm Model="country" OnValidSubmit="AddOrUpdateCountry" class="was-validated">
+                    <DataAnnotationsValidator></DataAnnotationsValidator>
 
-            @if (!country.IsNew)
-            {
-                <div class="my-header row">
-                    <div class="col">States</div>
-                    <div class="col text-align:center">Active</div>
-                    <div class="col"></div>
-                </div>
-
-                @foreach (var state in country.States)
-                {
+                    <div class="my-header row">
+                        <div class="col">Country</div>
+                        <div class="col text-align:center">Active</div>
+                        <div class="col"></div>
+                    </div>
                     <div class="row">
                         <div class="col">
-                            <InputText id="stateName" @bind-Value="state.Name" class="form-control form-control-sm"
-                                disabled="@state.IsDeleted" placeholder="Enter State" maxlength="30" required>
-                            </InputText>
-                            <ValidationMessage For="@(() => state.Name)" />
-                            <div class="invalid-feedback">Please enter the state name</div>
+                            <InputText id="countryName" @bind-Value="country.Name" class="form-control form-control-sm" placeholder="Enter Country" maxlength="30" required></InputText>
+                            <ValidationMessage For="@(() => country.Name)" />
+                            <div class="invalid-feedback">Please enter the country name</div>
                         </div>
                         <div class="col col-visible">
-                            <InputCheckbox @bind-Value="state.IsActive" class="form-check-input my-check-box" 
-                                disabled="@state.IsDeleted">
-                            </InputCheckbox>
+                            <InputCheckbox @bind-Value="country.IsActive" class="form-check-input my-check-box"></InputCheckbox>
                         </div>
                         <div class="col">
-                            <button type="button" class="btn btn-danger btn-sm" disabled="@state.IsDeleted" 
-                                @onclick="@(() => RemoveState(state))" title="Delete State">
-                                <i class="oi oi-trash"></i>
-                            </button>
                         </div>
                     </div>
+                    <hr>
+
+                    @if (!country.IsNew)
+                    {
+                        <div class="my-header row">
+                            <div class="col">States</div>
+                            <div class="col text-align:center">Active</div>
+                            <div class="col"></div>
+                        </div>
+
+                        @foreach (var state in country.States)
+                        {
+                            <div class="row">
+                                <div class="col">
+                                    <InputText id="stateName" @bind-Value="state.Name" class="form-control form-control-sm"
+                                   disabled="@state.IsDeleted" placeholder="Enter State" maxlength="30" required>
+                                    </InputText>
+                                    <ValidationMessage For="@(() => state.Name)" />
+                                    <div class="invalid-feedback">Please enter the state name</div>
+                                </div>
+                                <div class="col col-visible">
+                                    <InputCheckbox @bind-Value="state.IsActive" class="form-check-input my-check-box"
+                                       disabled="@state.IsDeleted">
+                                    </InputCheckbox>
+                                </div>
+                                <div class="col">
+                                    <button type="button" class="btn btn-danger btn-sm" disabled="@state.IsDeleted"
+                                @onclick="@(() => RemoveState(state))" title="Delete State">
+                                        <i class="oi oi-trash"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        }
+                        <button type="button" class="btn btn-primary btn-sm mt-3" @onclick="AddState">
+                            <i class="oi oi-plus"></i> Add State
+                        </button>
+                        <hr />
+                    }
+                    <button type="submit" class="btn btn-success btn-sm float-start">@btnSubmitButtonText</button>
+
+                </EditForm>
+                @if (!country.IsNew)
+                {
+                    <button type="button" class="btn btn-danger btn-sm float-end" @onclick="DeleteCountry">
+                        Delete Country
+                    </button>
                 }
-                <button type="button" class="btn btn-primary btn-sm mt-3" @onclick="AddState">
-                    <i class="oi oi-plus"></i> Add State
-                </button>
-                <hr />
-            }
-            <button type="submit" class="btn btn-success btn-sm float-start">@btnSubmitButtonText</button>
-
-        </EditForm>
-        @if (!country.IsNew)
-        {
-            <button type="button" class="btn btn-danger btn-sm float-end" @onclick="DeleteCountry">
-                Delete Country
-            </button>
-        }
-        <br />
-
-        <br />
+            </div>
+        </div>
     }
 </div>
 
