--- a/Eduversity.com/Client/Pages/Admin/Countries/EditLGA.razor
+++ b/Eduversity.com/Client/Pages/Admin/Countries/EditLGA.razor
@@ -10,63 +10,60 @@
 <div class="border m-1 p-3 rounded-3 mb-3">
     @if (loading)
     {
-       @* <span>@message</span>*@
+        @* <span>@message</span>*@
         <Loading Message=@message></Loading>
     }
     else
     {
         <h3 class="my-main-title">Edit LGA - "@lga.Name" in @StateName, @CountryName</h3><hr />
-
-        <button type="button" class="btn btn-outline-primary btn-sm float-end mb-3" @onclick="@(() => BackToCountries())">
-            Countries
-            <i class="oi oi-caret-right"></i>
-        </button>
-        <button type="button" class="btn btn-outline-primary btn-sm float-end mb-3 mx-1" @onclick="@(() => BackToStates())">
-            States
-            <i class="oi oi-caret-right"></i>
-        </button>
-        <button type="button" class="btn btn-outline-primary btn-sm float-end mb-3" @onclick="@(() => BackToLGAs())">
-            LGAs
-            <i class="oi oi-caret-right"></i>
-        </button>
-        <br />
-
-        <br />
-
-        <br />
-
-        <EditForm Model="lga" OnValidSubmit="AddOrUpdateLGA" class="was-validated">
-            <DataAnnotationsValidator></DataAnnotationsValidator>
-
-            <div class="my-header row">
-                <div class="col">LGA</div>
-                <div class="col text-align:center">Active</div>
+        <div class="card shadow mb-4">
+            <div class="card-header bg-transparent">
+                <button type="button" class="btn btn-outline-primary btn-sm float-end" @onclick="@(() => BackToCountries())">
+                    Countries
+                    <i class="oi oi-caret-right"></i>
+                </button>
+                <button type="button" class="btn btn-outline-primary btn-sm float-end mx-3" @onclick="@(() => BackToStates())">
+                    States
+                    <i class="oi oi-caret-right"></i>
+                </button>
+                <button type="button" class="btn btn-outline-primary btn-sm float-end" @onclick="@(() => BackToLGAs())">
+                    LGAs
+                    <i class="oi oi-caret-right"></i>
+                </button>
             </div>
-            <div class="row">
-                <div class="col">
-                    <InputText id="lgaName" @bind-Value="lga.Name" class="form-control form-control-sm" 
-                        placeholder="Enter LGA" maxlength="30" required>
-                    </InputText>
-                    <ValidationMessage For="@(() => lga.Name)" />
-                    <div class="invalid-feedback">Please enter the LGA name</div>
-                </div>
-                <div class="col col-visible">
-                    <InputCheckbox @bind-Value="lga.IsActive" class="form-check-input my-check-box"></InputCheckbox>
-                </div>
+            <div class="card-body">
+
+                <EditForm Model="lga" OnValidSubmit="AddOrUpdateLGA" class="was-validated">
+                    <DataAnnotationsValidator></DataAnnotationsValidator>
+
+                    <div class="my-header row">
+                        <div class="col">LGA</div>
+                        <div class="col text-align:center">Active</div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <InputText id="lgaName" @bind-Value="lga.Name" class="form-control form-control-sm"
+                                   placeholder="Enter LGA" maxlength="30" required>
+                            </InputText>
+                            <ValidationMessage For="@(() => lga.Name)" />
+                            <div class="invalid-feedback">Please enter the LGA name</div>
+                        </div>
+                        <div class="col col-visible">
+                            <InputCheckbox @bind-Value="lga.IsActive" class="form-check-input my-check-box"></InputCheckbox>
+                        </div>
+                    </div>
+                    <hr>
+
+                    <button type="submit" class="btn btn-success btn-sm float-start">@btnSubmitButtonText</button>
+                </EditForm>
+                @if (!lga.IsNew)
+                {
+                    <button type="button" class="btn btn-danger btn-sm float-end" @onclick="DeleteLGA">
+                        Delete LGA
+                    </button>
+                }
             </div>
-            <hr>
-
-            <button type="submit" class="btn btn-success btn-sm float-start">@btnSubmitButtonText</button>
-        </EditForm>
-        @if (!lga.IsNew)
-        {
-            <button type="button" class="btn btn-danger btn-sm float-end" @onclick="DeleteLGA">
-                Delete LGA
-            </button>
-        }
-        <br />
-
-        <br />
+        </div>
     }
 </div>
 
