--- a/Eduversity.com/Client/Pages/Admin/Courses/Courses.razor
+++ b/Eduversity.com/Client/Pages/Admin/Courses/Courses.razor
@@ -11,57 +11,70 @@
 
 <div class="border m-1 p-3 rounded-3">
 
-    <h3 class="my-main-title">Courses</h3><hr />
+    <h5 class="my-main-title">Courses</h5><hr />
 
     @if (loading)
     {
         @*<span>@message</span>*@
-        <Loading Message=@message></Loading>
+        <Loading Message=@message />
     }
     else
     {
-        <button class="btn btn-primary float-end mb-3" @onclick="CreateNewCourse">
-            <i class="oi oi-plus"></i>
-            Create New Course
-        </button>
-        <table class="table table-striped table-sm border">
-            <thead>
-                <tr>
-                    <th></th>
-                    <th>Code</th>
-                    <th>Title</th>
-                    <th class="my-text-align-center">Unit</th>
-                    <th class="my-text-align-center">Status</th>
-                    <th class="my-text-align-center">Active</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <Virtualize Items="courseService.Courses" Context="course">
-                    <tr>
-                        <td></td>
-                        <td>@course.Code</td>
-                        <td>@course.Title</td>
-                        <td class="my-text-align-center">@course.Unit</td>
-                        <td class="my-text-align-center">@course.Status</td>
-                        <td class="my-text-align-center">@(course.IsActive ? "✔️" : "❌")</td>
-                        <td class="my-text-align-center">
-                            <button class="btn btn-outline-primary btn-sm" @onclick="(() => EditCourse(course.Id))" title="Edit Course">
-                                <i class="oi oi-pencil"></i>
-                            </button>
-                        </td>
-                    </tr>
-                </Virtualize>
-            </tbody>
-        </table>
+        <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">
+                    The List of All the Courses in the University
 
-        for (var i = 1; i <= courseService.PageCount; i++)
-        {
-            <a class="btn
-                 @(i == courseService.CurrentPage ? "btn-primary" : "btn-outline-primary")
-                 page-selection me-2 mb-2"
-       href="/admin/courses/search/@courseService.LastSearchText/@i">@i</a>
-        }
+                    <button class="btn btn-sm btn-primary float-end" @onclick="CreateNewCourse">
+                        <i class="oi oi-plus"></i>
+                        Create New Course
+                    </button>
+                </h6>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-sm table-striped border">
+                        <thead class="bg-light">
+                            <tr>
+                                <th></th>
+                                <th>Code</th>
+                                <th>Title</th>
+                                <th class="my-text-align-center">Unit</th>
+                                <th class="my-text-align-center">Status</th>
+                                <th class="my-text-align-center">Active</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <Virtualize Items="courseService.Courses" Context="course">
+                                <tr>
+                                    <td></td>
+                                    <td>@course.Code</td>
+                                    <td>@course.Title</td>
+                                    <td class="my-text-align-center">@course.Unit</td>
+                                    <td class="my-text-align-center">@course.Status</td>
+                                    <td class="my-text-align-center">@(course.IsActive ? "✔️" : "❌")</td>
+                                    <td class="my-text-align-center">
+                                        <button class="btn btn-outline-primary btn-sm" @onclick="(() => EditCourse(course.Id))" title="Edit Course">
+                                            <i class="oi oi-pencil"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                            </Virtualize>
+                        </tbody>
+                    </table>
+
+                    @for (var i = 1; i <= courseService.PageCount; i++)
+                    {
+                        <a class="btn
+                            @(i == courseService.CurrentPage ? "btn-primary" : "btn-outline-primary")
+                            page-selection me-2 mb-2"
+                            href="/admin/courses/search/@courseService.LastSearchText/@i">@i
+                        </a>
+                    }
+                </div>
+            </div>
+        </div>
     }
 </div>
 
