--- a/Eduversity.com/Client/Pages/Admin/Faculties/DepartmentOptions.razor
+++ b/Eduversity.com/Client/Pages/Admin/Faculties/DepartmentOptions.razor
@@ -7,7 +7,7 @@
 <PageTitle>Department Options</PageTitle>
 
 <div class="border m-1 p-3 rounded-3 mb-3">
-    <h3 class="my-main-title">Options in @DepartmentName, Faculty of @FacultyName.</h3><hr />
+    <h5 class="my-main-title">Options in @DepartmentName, Faculty of @FacultyName.</h5><hr />
 
     @if (loading)
     {
@@ -26,7 +26,7 @@
                         <i class="oi oi-caret-right"></i>
                     </button>
                     <button type="button" class="btn btn-outline-primary btn-sm float-end mx-3" @onclick="@(() => BackToDepartments(FacultyId))">
-                        Depts...
+                        Departments
                         <i class="oi oi-caret-right"></i>
                     </button>
                 </h6>
@@ -61,7 +61,7 @@
                         <i class="oi oi-caret-right"></i>
                     </button>
                     <button type="button" class="btn btn-outline-primary btn-sm float-end mb-3 mx-3" @onclick="@(() => BackToDepartments(FacultyId))">
-                        Depts...
+                        Departments
                         <i class="oi oi-caret-right"></i>
                     </button>
                 </div>
