--- a/Eduversity.com/Client/Pages/Admin/Faculties/EditDepartmentOption.razor
+++ b/Eduversity.com/Client/Pages/Admin/Faculties/EditDepartmentOption.razor
@@ -10,67 +10,70 @@
 <div class="border m-1 p-3 rounded-3 mb-3">
     @if (loading)
     {
-       @* <span>@message</span>*@
+        @* <span>@message</span>*@
         <Loading Message=@message></Loading>
     }
     else
     {
-        <h3 class="my-main-title">Edit Option - "@option.Name", Department of @DepartmentName, Faculty of @FacultyName</h3><hr />
+        <h5 class="my-main-title">Edit Option - "@option.Name", Department of @DepartmentName, Faculty of @FacultyName</h5>
 
-        <button type="button" class="btn btn-outline-primary btn-sm float-end mb-3" @onclick="@(() => BackToFaculties())">
-            Faculties
-            <i class="oi oi-caret-right"></i>
-        </button>
-        <button type="button" class="btn btn-outline-primary btn-sm float-end mb-3 mx-3" @onclick="@(() => BackToDepartments())">
-            Depts
-            <i class="oi oi-caret-right"></i>
-        </button>
-        <button type="button" class="btn btn-outline-primary btn-sm float-end mb-3" @onclick="@(() => BackToOptions())">
-            Opts
-            <i class="oi oi-caret-right"></i>
-        </button>
-        <br />
+        <hr />
 
-        <br />
+        <div class="card shadow mb-4">
+            <div class="card-header bg-transparent">
 
-        <br />
-
-        <EditForm Model="option" OnValidSubmit="AddOrUpdateOption" class="was-validated">
-            <DataAnnotationsValidator></DataAnnotationsValidator>
-
-            <div class="my-header row">
-                <div class="col-10"></div>
-                <div class="col-5">Option</div>
-                <div class="col-3">Abbrv</div>
-                <div class="col-2 text-align:center">Active</div>
+                <button type="button" class="btn btn-outline-primary btn-sm float-end" @onclick="@(() => BackToFaculties())">
+                    Faculties
+                    <i class="oi oi-caret-right"></i>
+                </button>
+                <button type="button" class="btn btn-outline-primary btn-sm float-end mx-3" @onclick="@(() => BackToDepartments())">
+                    Depts...
+                    <i class="oi oi-caret-right"></i>
+                </button>
+                <button type="button" class="btn btn-outline-primary btn-sm float-end" @onclick="@(() => BackToOptions())">
+                    Options
+                    <i class="oi oi-caret-right"></i>
+                </button>
             </div>
-            <div class="row">
-                <div class="col-10"></div>
-                <div class="col-5">
-                    <InputText id="optionName" @bind-Value="option.Name" class="form-control form-control-sm" placeholder="Enter Option Name" maxlength="50" required></InputText>
-                    <ValidationMessage For="@(() => option.Name)" />
-                    <div class="invalid-feedback">Please enter the option name</div>
-                </div>
-                <div class="col-3">
-                    <InputText id="optionAbbreviation" @bind-Value="option.Abbreviation" class="form-control form-control-sm" placeholder="Abbreviation" maxlength="3" required></InputText>
-                    <ValidationMessage For="@(() => option.Abbreviation)" />
-                    <div class="invalid-feedback">Please enter the abbreviation</div>
-                </div>
-                <div class="col-2 col-visible">
-                    <InputCheckbox @bind-Value="option.IsActive" class="form-check-input my-check-box"></InputCheckbox>
-                </div>
-            </div>
-            <hr>
+            <div class="card-body">
 
-            <button type="submit" class="btn btn-success btn-sm float-start">@btnSubmitButtonText</button>
-        </EditForm>
-        @if (!option.IsNew)
-        {
-            <button type="button" class="btn btn-danger btn-sm float-end" @onclick="DeleteOption">
-                Delete Option
-            </button>
-        }
-        <br /><br />
+                <EditForm Model="option" OnValidSubmit="AddOrUpdateOption" class="was-validated">
+                    <DataAnnotationsValidator></DataAnnotationsValidator>
+
+                    <div class="my-header row">
+                        <div class="col-10"></div>
+                        <div class="col-5">Option</div>
+                        <div class="col-3">Abbrv</div>
+                        <div class="col-2 text-align:center">Active</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-10"></div>
+                        <div class="col-5">
+                            <InputText id="optionName" @bind-Value="option.Name" class="form-control form-control-sm" placeholder="Enter Option Name" maxlength="50" required></InputText>
+                            <ValidationMessage For="@(() => option.Name)" />
+                            <div class="invalid-feedback">Please enter the option name</div>
+                        </div>
+                        <div class="col-3">
+                            <InputText id="optionAbbreviation" @bind-Value="option.Abbreviation" class="form-control form-control-sm" placeholder="Abbreviation" maxlength="3" required></InputText>
+                            <ValidationMessage For="@(() => option.Abbreviation)" />
+                            <div class="invalid-feedback">Please enter the abbreviation</div>
+                        </div>
+                        <div class="col-2 col-visible">
+                            <InputCheckbox @bind-Value="option.IsActive" class="form-check-input my-check-box"></InputCheckbox>
+                        </div>
+                    </div>
+                    <hr>
+
+                    <button type="submit" class="btn btn-success btn-sm float-start">@btnSubmitButtonText</button>
+                </EditForm>
+                @if (!option.IsNew)
+                {
+                    <button type="button" class="btn btn-danger btn-sm float-end" @onclick="DeleteOption">
+                        Delete Option
+                    </button>
+                }
+            </div>
+        </div>
     }
 </div>
 
