--- a/Eduversity.com/Client/Shared/Courses/CourseStructureListComponent.razor
+++ b/Eduversity.com/Client/Shared/Courses/CourseStructureListComponent.razor
@@ -1,5 +1,4 @@
-﻿
-@inject ICourseStructureService courseStructureService
+﻿@inject ICourseStructureService courseStructureService
 @inject NavigationManager navigationManager
 @inject IJSRuntime jsRuntime
 @inject IToastService toastService
@@ -9,7 +8,7 @@
 
 <div class="border m-1 p-3 rounded-3">
 
-    <h3 class="my-main-title">List of Courses for @DepartmentOptionName</h3><hr />
+    <h5 class="my-main-title">List of Courses for @DepartmentOptionName</h5><hr />
 
     @if (loading)
     {
@@ -18,40 +17,48 @@
     }
     else
     {
-        <button class="btn btn-outline-success float-start mb-3" @onclick="@(() => BackToProgrammeList())">
-            <i class="oi oi-caret-left"></i>
-            Back
-        </button>
-        <table class="table table-striped table-sm border">
-            <thead>
-                <tr>
-                    <th>Code</th>
-                    <th>Title</th>
-                    <th class="my-text-align-center">Unit</th>
-                    <th class="my-text-align-center">Status</th>
-                    <th class="my-text-align-center">Level</th>
-                    <th class="my-text-align-center">Semester</th>
-                    <th class="my-text-align-center">❌</th>
-                </tr>
-            </thead>
-            <tbody>
-                <Virtualize Items="courseStructureService.ListOfCourses" Context="courseStructure">
-                    <tr>
-                        <td>@courseStructure.CourseCode</td>
-                        <td>@courseStructure.CourseTitle</td>
-                        <td class="my-text-align-center">@courseStructure.CourseUnit</td>
-                        <td class="my-text-align-center">@courseStructure.CourseStatus</td>
-                        <td class="my-text-align-center">@courseStructure.Level</td>
-                        <td class="my-text-align-center">@courseStructure.Semester</td>
-                        <td class="my-text-align-center">
-                            <button type="button" class="btn btn-danger btn-sm" @onclick="@(() => RemoveCourseStructure(courseStructure))" title="Remove Course">
-                                <i class="oi oi-trash"></i>
-                            </button>
-                        </td>
-                    </tr>
-                </Virtualize>
-            </tbody>
-        </table>
+        <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                <button class="btn btn-sm btn-outline-success float-start" @onclick="@(() => BackToProgrammeList())">
+                    <i class="oi oi-caret-left"></i>
+                    Back
+                </button>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-sm table-striped border">
+                        <thead class="bg-light">
+                            <tr>
+                                <th>Code</th>
+                                <th>Title</th>
+                                <th class="my-text-align-center">Unit</th>
+                                <th class="my-text-align-center">Status</th>
+                                <th class="my-text-align-center">Level</th>
+                                <th class="my-text-align-center">Semester</th>
+                                <th class="my-text-align-center">❌</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <Virtualize Items="courseStructureService.ListOfCourses" Context="courseStructure">
+                                <tr>
+                                    <td>@courseStructure.CourseCode</td>
+                                    <td>@courseStructure.CourseTitle</td>
+                                    <td class="my-text-align-center">@courseStructure.CourseUnit</td>
+                                    <td class="my-text-align-center">@courseStructure.CourseStatus</td>
+                                    <td class="my-text-align-center">@courseStructure.Level</td>
+                                    <td class="my-text-align-center">@courseStructure.Semester</td>
+                                    <td class="my-text-align-center">
+                                        <button type="button" class="btn btn-danger btn-sm" @onclick="@(() => RemoveCourseStructure(courseStructure))" title="Remove Course">
+                                            <i class="oi oi-trash"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                            </Virtualize>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     }
 </div>
 
@@ -98,7 +105,7 @@
             bool confirmed = await jsRuntime.InvokeAsync<bool>("confirm",
                             $"Do you really want to delete '{courseStructure.CourseCode}: {courseStructure.CourseTitle}'?");
             if (confirmed)
-            {                
+            {
                 await courseStructureService.RemoveCourse(courseStructure.Id);
                 await courseStructureService.GetListOfCourses(DepartmentOptionId);
                 //await InvokeAsync(() =>
