--- a/Eduversity.com/Client/Shared/Layouts/MenuCreateUsers.razor
+++ b/Eduversity.com/Client/Shared/Layouts/MenuCreateUsers.razor
@@ -1,5 +1,5 @@
 ﻿@inject IToggleMenuService toggleMenuService
-@attribute [Authorize(Roles = "SuperAdmin,Admin")]
+@attribute [Authorize(Roles = "Admin,SuperAdmin")]
 
 <li class="nav-item px-1">
     <NavLink class="nav-link" @onclick="() => toggleMenuService.TogleSubmenu(NavSubmenu.First)">
@@ -18,6 +18,11 @@
     <li class="nav-item ps-5 pe-1">
         <NavLink class="nav-link" @onclick="() => toggleMenuService.ToggleNavMenu()" href="lecturer/signup">
             Lecturer
+        </NavLink>
+    </li>
+    <li class="nav-item ps-5 pe-1">
+        <NavLink class="nav-link" @onclick="() => toggleMenuService.ToggleNavMenu()" href="hod/signup">
+            HOD
         </NavLink>
     </li>
     <AuthorizeView Roles="SuperAdmin">
